[package]
name = "Http-request-forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
bytes = "1.10.1"
